syntax = "proto3";

package common;

option go_package = "github.com/CityBear3/WariCan/protobuf/common;commonModel";

message WalletModel {
  string id = 1;
  string user_id = 2;
  Balance balance = 3;

  message Balance {
    fixed64 amount = 1;
  }
}


